--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.0.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.uc.alliance</groupId>
-	<artifactId>service-charge-app</artifactId>
+	<groupId>seven</groupId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>service-charge-app</name>
-	<description>Demo project for Spring Boot</description>
+	<name>ServiceCharge</name>
+	<description>Service Charge App</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
