--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 #JPA SETTINGS
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-spring.jpa.properties.hibernate.hbm2ddl.auto: update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#spring.jpa.properties.hibernate.hbm2ddl.auto: update
 
 #JDBC Settings
 spring.datasource.url=jdbc:mysql://localhost:3369/service_charge
