--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.hbm2ddl.auto: update
 
 #JDBC Settings
-spring.datasource.url=jdbc:mysql://localhost:3369/service_charge
+spring.datasource.url=jdbc:mysql://localhost:3306/service_charge
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=imdbsys31
 logging.level.root=INFO
