--- a/backend/src/main/resources/application.properties.sample
+++ b/backend/src/main/resources/application.properties.sample
@@ -1,3 +1,5 @@
+# !!! RENAME TO 'application.properties' !!!
+
 #JPA SETTINGS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
