--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,13 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "filepond": "^4.30.4",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
     "next": "13.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
+    "react-filepond": "^7.1.2",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   }
