--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "filepond": "^4.30.4",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
+    "html2canvas": "^1.4.1",
     "next": "13.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
