--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #JDBC Settings
-spring.datasource.url=jdbc:mysql://localhost:3369/service_charge
+spring.datasource.url=jdbc:mysql://localhost:3306/service_charge
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=Chang-hanlou13
 logging.level.root=INFO
