sender and controler

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,6 +17,19 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>		
+		
+	<!-- Just added for email -->	
+		<dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>javax.mail</artifactId>
+    <version>1.6.2</version>
+</dependency>
+<!-- Just added for email -->	
+
+<!-- Just added for email -->	
+
+		
+		
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 		    <groupId>com.google.code.gson</groupId>
