--- a/backend/src/main/resources/application.properties.sample
+++ b/backend/src/main/resources/application.properties.sample
@@ -18,8 +18,8 @@ spring.servlet.multipart.max-request-size=20MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.senderName=Alliance Service Charge
-spring.mail.username=stargaze.lt@gmail.com
-spring.mail.password=rgkcmqcefyknyitg
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
